--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Dude where's my Bike?</title>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body ng-app="yoAngularApp">
 <!--[if lt IE 7]>
