done. all tests pass, odd issue where if you try to tun integration and unit test in same run it seems to load nock for integration which isnt needed

--- a/app/index.html
+++ b/app/index.html
@@ -14,18 +14,13 @@
 
 <div class="container">
   <div class="header">
-    <ul class="nav nav-pills pull-right">
-      <li class="active"><a ng-href="#">Home</a></li>
-      <li><a ng-href="#">About</a></li>
-      <li><a ng-href="#">Contact</a></li>
-    </ul>
-    <h3 class="text-muted">yoAngular</h3>
+    <h3 class="text-muted">Cycle London</h3>
   </div>
 
   <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
 
   <div class="footer">
-    <p><span class="glyphicon"></span> On your Bike</p>
+    <p><span class="glyphicon"></span> Get on your Bike</p>
   </div>
 </div>
 
